feat(impl-crud): drop course assessments